--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2018"
 [dependencies]
 rio = "0.9.4"
 httparse = "1.3.4"
-async-std = "1.6.3"
+async-std = {version = "1.6.3", features = ["attributes"]}
